// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Tag Snap Shot Chip 1`] = `
<span
  className="rounded-sm text-sm"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "backgroundColor": "#E10718",
      "color": "white",
      "opacity": 1,
      "paddingLeft": 12,
      "paddingRight": 12,
    }
  }
>
  #
  front-end
</span>
`;

exports[`ui/Tag Snap Shot button Chip 1`] = `
<button
  className="rounded-sm text-sm"
  onClick={[MockFunction]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "backgroundColor": "white",
      "color": "#E10718",
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  #
  front-end
</button>
`;

exports[`ui/Tag Snap Shot outline Chip 1`] = `
<span
  className="rounded-sm text-sm"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "backgroundColor": "white",
      "color": "#E10718",
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  #
  front-end
</span>
`;
